added frontend weather theme

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/fazalmahmood1/weatherApp#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "hbs": "^4.0.6",
+    "nodemon": "^2.0.1",
     "request": "^2.88.0"
   }
 }
